--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
@@ -79,7 +79,7 @@
                     <a class="dropdown-item" href="#"
                       ><img
                         class="dropdown-img"
-                        src="images/icon-todo.svg"
+                        src="icon-todo.svg"
                         alt=""
                       />Todo list</a
                     >
@@ -88,7 +88,7 @@
                     <a class="dropdown-item" href="#"
                       ><img
                         class="dropdown-img"
-                        src="images/icon-calendar.svg"
+                        src="icon-calendar.svg"
                         alt=""
                       />
                       Calender</a
@@ -98,7 +98,7 @@
                     <a class="dropdown-item" href="#"
                       ><img
                         class="dropdown-img"
-                        src="images/icon-reminders.svg"
+                        src="icon-reminders.svg"
                         alt=""
                       />
                       Reminders</a
@@ -108,7 +108,7 @@
                     <a class="dropdown-item" href="#"
                       ><img
                         class="dropdown-img"
-                        src="images/icon-planning.svg"
+                        src="icon-planning.svg"
                         alt=""
                       />
                       Planning</a
@@ -148,7 +148,7 @@
       </nav>
       <img
         class="hero-image"
-        src="images/image-hero-desktop.png"
+        src="image-hero-desktop.png"
         alt="hero-image"
       />
       <div class="intro">
@@ -159,10 +159,10 @@
         </p>
         <a href="#" class="learn-more btn btn-lg">Learn more</a>
         <div class="svgs">
-          <img class="svg-img" src="images/client-databiz.svg" alt="svg" />
-          <img class="svg-img" src="images/client-audiophile.svg" alt="svg" />
-          <img class="svg-img" src="images/client-meet.svg" alt="svg" />
-          <img class="svg-img" src="images/client-maker.svg" alt="svg" />
+          <img class="svg-img" src="client-databiz.svg" alt="svg" />
+          <img class="svg-img" src="client-audiophile.svg" alt="svg" />
+          <img class="svg-img" src="client-meet.svg" alt="svg" />
+          <img class="svg-img" src="client-maker.svg" alt="svg" />
         </div>
       </div>
     </div>
