--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <!-- displays site properly based on user's device -->
 
     <link
